tests/TypingSpec/valid/prog/case-data-wildcard-1.algst
and : Bool -> Bool -> Bool
and x y =
  case x of {
    True -> y,
    _    -> False
  }
