tests/TypingSpec/invalid/types/case-unnecessary-wildcard.algst
\(b : Bool) -> case b of {
  True -> 1,
  False -> 2,
  _ -> 3,
}
